<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/image_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_content_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sample_size"/>
        <TextView
            android:id="@+id/sample_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:onClick="scaleUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_scale_up" />

        <Button
            android:onClick="scaleDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_scale_down" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:onClick="changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_change_image" />
        <TextView
            android:id="@+id/image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>